--- a/en.html
+++ b/en.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Joris Lefait est un développeur web freelance et passionné d'automatisation, qui crée des sites web fonctionnels et optimise les processus métier avec du code propre et des solutions efficaces."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       property="og:title"
-      content="Joris Lefait - Développeur Web & Expert en Automatisation"
+      content="Joris Lefait - Web Developer & Automation Enthusiast"
     />
     <meta
       property="og:description"
-      content="Joris Lefait est un développeur web freelance et passionné d'automatisation, qui crée des sites web fonctionnels et optimise les processus métier avec du code propre et des solutions efficaces."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       property="og:image"
       content="https://www.jorislefait.com/assets/JL-black.svg"
     />
-    <meta property="og:url" content="https://www.jorislefait.com/fr.html" />
+    <meta property="og:url" content="https://www.jorislefait.com/en.html" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Joris Lefait - Développeur Web & Expert en Automatisation"
+      content="Joris Lefait - Web Developer & Automation Enthusiast"
     />
     <meta
       name="twitter:description"
-      content="Joris Lefait est un développeur web freelance et passionné d'automatisation, qui crée des sites web fonctionnels et optimise les processus métier avec du code propre et des solutions efficaces."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       name="twitter:image"
       content="https://www.jorislefait.com/assets/JL-black.svg"
     />
     <link rel="icon" href="assets/JL-white.svg" type="image/svg+xml" />
-    <title>Joris Lefait - Développeur Web & Expert en Automatisation</title>
+    <title>Joris Lefait - Web Developer & Automation Expert</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -49,17 +49,17 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="#hero"
-            ><img src="assets/JL-white.svg" alt="Logo Joris Lefait"
+          <a href="en.html#hero"
+            ><img src="assets/JL-white.svg" alt="Joris Lefait Logo"
           /></a>
         </div>
         <ul>
-          <li><a href="#about">À propos</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#skills">Compétences<aa></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="en.html">EN</a></li>
+          <li><a href="index.html">FR</a></li>
         </ul>
       </nav>
     </header>
@@ -68,31 +68,30 @@
       <section id="hero">
         <div class="hero-content">
           <h1>Joris Lefait</h1>
-          <p>Développeur Web Freelance</p>
-          <a href="#contact" class="cta-button">Contactez-moi</a>
+          <p>Freelance Web Developer</p>
+          <a href="#contact" class="cta-button">Get in Touch</a>
         </div>
       </section>
 
       <section id="about">
-        <h2>Qui suis-je ?</h2>
+        <h2>About Me</h2>
         <div class="about-content">
           <img
             src="assets/profile-picture.jpg"
-            alt="Avatar Joris Lefait"
+            alt="Joris Lefait Avatar"
             class="avatar"
           />
           <p>
-            Je conçois des applications robustes et sur mesure, avec une
-            approche pragmatique et efficace. <br />
-            Au-delà du code, j'intègre les enjeux métiers, l'architecture et
-            l'expérience utilisateur pour garantir le succès de votre projet.
-            <br /><br />
-            Développeur à la fois front-end et back-end, j'aime avoir une vision
-            globale du produit sur lequel je travaille pour comprendre chaque
-            aspect de votre projet et répondre au mieux à vos besoins en
-            apportant des solutions sur mesure. <br /><br />
-            Besoin de démarrer un projet de zéro ou besoin d'un accompagnement
-            ponctuel ? Pourquoi ne pas prendre le temps d'en discuter ?
+            I design robust applications tailored to your needs, with a
+            pragmatic and efficient approach. <br />
+            Beyond the code, I integrate business challenges, architecture, and
+            user experience to ensure the success of your project. <br /><br />
+            As both a front-end and back-end developer, I like to have a
+            comprehensive view of the product I'm working on to understand every
+            side of your project and best meet your needs by providing
+            tailor-made solutions. <br /><br />
+            Need to start a project from scratch or need occasional support? Why
+            not take some time to discuss it?
           </p>
         </div>
         <div class="about-social">
@@ -132,47 +131,43 @@
         <div class="service-container">
           <div class="service-box">
             <i class="fas fa-laptop-code service-icon"></i>
-            <h3>Développement Web</h3>
+            <h3>Web Development</h3>
             <p>
-              De la simple page de destination aux applications web complexes,
-              je crée des sites web réactifs et conviviaux qui s'affichent
-              parfaitement sur tous les appareils.
+              From simple landing pages to complex web applications, I create
+              responsive, user-friendly websites that look great on all devices.
             </p>
           </div>
           <div class="service-box">
             <span class="badge">New</span>
             <i class="fas fa-robot service-icon"></i>
-            <h3>Automatisations</h3>
+            <h3>Automations</h3>
             <p>
-              Je conçois et mets en œuvre des automatisations personnalisées
-              pour gérer les tâches répétitives, vous faisant gagner du temps et
-              réduisant les erreurs. Rendons votre flux de travail plus
-              efficace.
+              I design and implement custom automations to handle repetitive
+              tasks, saving you time and reducing errors. Let's make your
+              workflow more efficient.
             </p>
           </div>
           <div class="service-box">
             <i class="fas fa-plug service-icon"></i>
-            <h3>Intégration d'API</h3>
+            <h3>API Integration</h3>
             <p>
-              Connectez en toute transparence vos applications et services grâce
-              à des intégrations d'API robustes, permettant le flux de données
-              et des fonctionnalités améliorées.
+              Seamlessly connect your applications and services through robust
+              API integrations, enabling data flow and enhanced functionality.
             </p>
           </div>
           <div class="service-box">
             <i class="fas fa-sync-alt service-icon"></i>
-            <h3>Modernisation de Code</h3>
+            <h3>Codebase Modernization</h3>
             <p>
-              Transformez le code legacy en solutions modernes, maintenables et
-              évolutives, améliorant les performances et l'expérience des
-              développeurs ainsi que des utilisateurs.
+              Transform legacy code into modern, maintainable, and scalable
+              solutions, improving performance and developer experience.
             </p>
           </div>
         </div>
       </section>
 
       <section id="skills">
-        <h2>Compétences</h2>
+        <h2>Skills</h2>
         <div class="skills-container">
           <div class="skill-box">HTML</div>
           <div class="skill-box">CSS</div>
@@ -200,9 +195,9 @@
           <div class="portfolio-item">
             <h3>TheHive</h3>
             <p>
-              Maintenir et développer de nouvelles fonctionnalités pour une
-              plateforme de gestion de cas de cybersécurité : plus
-              d'informations sur le projet avec le lien ci-dessous.
+              Maintain and develop new features for a Cyber Security Case
+              Management Platform: more informations about the project with the
+              link below.
             </p>
             <div class="stack">
               <span>React</span><span>Antd Design</span><span>SCSS</span
@@ -213,16 +208,15 @@
               target="_blank"
               rel="noopener noreferrer"
               class="live-preview"
-              >Aperçu</a
+              >Live Preview</a
             >
           </div>
           <div class="portfolio-item">
             <h3>La Banque Postale</h3>
             <p>
-              Refonte complète de l'application client, réflexions UX sur les
-              prototypes, création de POC, formation des développeurs chez le
-              client, intégration des cycles de développement en mode agile
-              (SCRUM)
+              Full rework of customer application, UX reflections on prototypes,
+              creation of POCs, training developers at the client, integration
+              of development cycles in agile mode (SCRUM)
             </p>
             <div class="stack">
               <span>React Native</span><span>Gitlab</span><span>NativeBase</span
@@ -230,11 +224,11 @@
             </div>
           </div>
           <div class="portfolio-item">
-            <h3>Amélioration de Chatbot</h3>
+            <h3>Chatbot Improvement</h3>
             <p>
-              Créer une IHM qui permet à l'analyste de données de retravailler
-              certaines réponses du chatbot pour le rendre plus efficace. En
-              binôme avec un data scientist, à distance.
+              Create an HMI which allow data analyst to rework on some chatbot
+              responses to make it more efficient. In pair with a data
+              scientist, remotly.
             </p>
             <div class="stack">
               <span>React</span><span>Python</span><span>Uvicorn</span
@@ -244,10 +238,10 @@
           <div class="portfolio-item">
             <h3>SNCF</h3>
             <p>
-              Refonte du front-end de tous les sites ter.sncf.fr, en React +
-              Next.js avec des contraintes d'accessibilité, et des thèmes de
-              spécification par région. Dans une équipe de 10 personnes parfois
-              chez le client, le plus souvent à distance.
+              Rework of the front-end of all ter.sncf.fr websites, in React +
+              Next.js with accessibility constraints, and regions specifiation
+              themes. In a team of 10 peoples sometimes in customer's office,
+              most remotly.
             </p>
             <div class="stack">
               <span>TypeScript</span><span>React</span><span>NextJS</span
@@ -259,17 +253,16 @@
               target="_blank"
               rel="noopener noreferrer"
               class="live-preview"
-              >Aperçu</a
+              >Live Preview</a
             >
           </div>
           <div class="portfolio-item">
             <h3>Cevoo</h3>
             <p>
-              Application mobile entièrement dédiée aux auxiliaires
-              vétérinaires. Ajout de nouvelles fonctionnalités, mise à jour du
-              code, optimisation des performances. Mise en place d'un système de
-              points par utilisateur en fonction des actions réalisées, ajout
-              d'une fonctionnalité de duel entre utilisateurs.
+              Mobile application entirely dedicated to veterinary auxiliaries.
+              Addition of new features, code update, performance optimization.
+              Implementation of a points system per user according to the
+              actions performed, addition of a duel functionality between users.
             </p>
             <div class="stack">
               <span>React Native</span><span>Node.JS</span
@@ -279,9 +272,8 @@
           <div class="portfolio-item">
             <h3>Unsold</h3>
             <p>
-              Mise à jour du back-end et des API. Migration de certaines
-              requêtes PostgreSQL vers des requêtes Prisma pour une amélioration
-              des performances.
+              Update back-end and API's. Migration of some PostgreSQL requests
+              to Prisma requests for performance improvement.
             </p>
             <div class="stack">
               <span>Node.JS</span><span>Express</span><span>Prisma</span
@@ -291,18 +283,17 @@
           <div class="portfolio-item">
             <h3>SuperCollab</h3>
             <p>
-              Dans le cadre de la création d'une Start-Up, création d'une Web
-              App permettant la mise en relation entre différents cabinets
-              d'avocats / notaires.
+              As part of the creation of a Start-Up, creation of a Web App
+              allowing the connection between different law firms / notaries.
             </p>
             <div class="stack"><span>React</span><span>Docker</span></div>
           </div>
           <div class="portfolio-item">
             <h3>NewDeal</h3>
             <p>
-              Lors d'un partenariat entre NewDeal et La Mobilery, réalisation
-              d'une application mobile en React Native d'une solution de gestion
-              RH (établissement de fiches de paie, demandes de congés...).
+              During a partnership between NewDeal and La Mobilery, realization
+              of a mobile application in React Native of an HR management
+              solution (establishment of pay slips, leave requests ...).
             </p>
             <div class="stack">
               <span>React Native</span><span>Typescript</span>
@@ -311,11 +302,11 @@
           <div class="portfolio-item">
             <h3>Experiencis</h3>
             <p>
-              Développement d'une plateforme visant à mettre en relation
-              acheteurs et particuliers afin de réaliser des visites à distance
-              de biens (immobilier, automobile, high-tech). En tandem avec un
-              lead technique, renfort sur la partie développement Front d'une
-              Web App en ReactJS.
+              Development of a platform aimed at connecting buyers and
+              individuals in order to carry out remote visits to goods (real
+              estate, automobile, high-tech). In tandem with a technical lead,
+              reinforcement on the Front development part of a Web App in
+              ReactJS.
             </p>
             <div class="stack">
               <span>React</span><span>Material Design</span>
@@ -324,10 +315,10 @@
           <div class="portfolio-item">
             <h3>RapidFlyer</h3>
             <p>
-              Refonte du front-end pour la V4 du site en Next.js en headless
-              commerce. Dans une équipe de 10 personnes directement chez le
-              client. Développement d'écrans et déploiement de phases de revenus
-              en contact direct avec le client.
+              Redesign of the front-end for the V4 of the Website in Next.js in
+              headless commerce. In a team of 10 people directly at the
+              customer. Development of screens and deployment of revenue phases
+              in direct contact with the customer.
             </p>
             <div class="stack">
               <span>React</span><span>NextJS</span><span>Azure</span
@@ -339,22 +330,22 @@
               target="_blank"
               rel="noopener noreferrer"
               class="live-preview"
-              >Aperçu</a
+              >Live Preview</a
             >
           </div>
           <div class="portfolio-item">
             <h3>Leroy Merlin</h3>
             <p>
-              Intervention en tant que techOps. Gestion du parc de terminaux
-              déployés en France en magasin et en entrepôt via un MDM.
-              Déploiement des mises à jour et des correctifs sur les terminaux.
-              Mise en place de retours analytiques pour suivre l'état des
-              déploiements et des terminaux. Développement d'une plateforme de
-              monitoring des solutions déployées par la squad. Participation au
-              Google Cloud Challenge pendant 3 jours en partenariat avec ADEO,
-              projet de portage d'une application legacy sur une infrastructure
-              cloud. Benchmark des différents MDM du marché, consultation des
-              constructeurs de terminaux pour le renouvellement du parc.
+              Intervention as a techOps. Management of the fleet of terminals
+              deployed in France in stores and warehouses via an MDM. Deployment
+              of updates and fixes to terminals. Implementation of analytics
+              feedback to monitor the status of deployments and terminals.
+              Development of a monitoring platform for the solutions deployed by
+              the squad. Participation in the Google Cloud Challenge for 3 days
+              in partnership with ADEO, project to port a legacy application to
+              a cloud infrastructure. Benchmark of the various MDMs on the
+              market, consultation with terminal manufacturers for fleet
+              renewal.
             </p>
             <div class="stack">
               <span>Javascript</span><span>Python</span><span>Shell</span
@@ -366,34 +357,33 @@
       </section>
 
       <section id="contact">
-        <h2>Contactez-moi</h2>
+        <h2>Contact Me</h2>
         <p>
-          Je suis actuellement disponible pour des missions en freelance. Si
-          vous avez un projet en tête ou si vous voulez simplement dire bonjour,
-          veuillez remplir le formulaire ci-dessous et je vous répondrai dans
-          les plus brefs délais.
+          I'm currently available for freelance work. If you have a project in
+          mind or just want to say hello, please fill out the form below and I
+          will get back to you as soon as possible.
         </p>
         <form
           id="contact-form"
           action="https://formspree.io/f/mrblerek"
           method="POST"
         >
-          <input type="text" name="name" placeholder="Votre Nom" required />
-          <input type="email" name="email" placeholder="Votre Email" required />
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
           <textarea
             name="message"
-            placeholder="Votre Message"
+            placeholder="Your Message"
             required
           ></textarea>
-          <button type="submit">Envoyer le message</button>
+          <button type="submit">Send Message</button>
         </form>
       </section>
     </main>
 
     <footer>
       <p>
-        &copy; 2025 Joris Lefait. Tous droits réservés. |
-        <a href="legal_fr.html">Mentions légales</a>
+        &copy; 2025 Joris Lefait. All rights reserved. |
+        <a href="legal_en.html">Legal notice</a>
       </p>
     </footer>
 
