--- a/legal_en.html
+++ b/legal_en.html
@@ -12,12 +12,13 @@
     <header>
       <nav>
         <div class="logo">
-          <a href="index.html"
+          <a href="en.html"
             ><img src="assets/JL-white.svg" alt="Joris Lefait Logo"
           /></a>
         </div>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="en.html">Home</a></li>
+          <li><a href="legal_fr.html">FR</a></li>
         </ul>
       </nav>
     </header>
