--- a/legal_en.html
+++ b/legal_en.html
@@ -16,7 +16,10 @@
             ><img src="assets/JL-white.svg" alt="Joris Lefait Logo"
           /></a>
         </div>
-        <ul>
+        <button class="burger-menu" id="burger-menu" aria-label="Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-links" id="nav-links">
           <li><a href="en.html">Home</a></li>
           <li><a href="legal_fr.html">FR</a></li>
         </ul>
