--- a/legal_fr.html
+++ b/legal_fr.html
@@ -16,7 +16,10 @@
             ><img src="assets/JL-white.svg" alt="Logo Joris Lefait"
           /></a>
         </div>
-        <ul>
+        <button class="burger-menu" id="burger-menu" aria-label="Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-links" id="nav-links">
           <li><a href="index.html">Accueil</a></li>
           <li><a href="legal_en.html">EN</a></li>
         </ul>
