--- a/en.html
+++ b/en.html
@@ -53,7 +53,10 @@
             ><img src="assets/JL-white.svg" alt="Joris Lefait Logo"
           /></a>
         </div>
-        <ul>
+        <button class="burger-menu" id="burger-menu" aria-label="Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-links" id="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#skills">Skills</a></li>
