--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
             ><img src="assets/JL-white.svg" alt="Logo Joris Lefait"
           /></a>
         </div>
-        <ul>
+        <button class="burger-menu" id="burger-menu" aria-label="Menu">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul class="nav-links" id="nav-links">
           <li><a href="#about">À propos</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#skills">Compétences<aa></li>
